--- a/Source/com.avermedia.ifttt/PackageConfig.json
+++ b/Source/com.avermedia.ifttt/PackageConfig.json
@@ -5,21 +5,21 @@
     "UUID": "com.avermedia.ifttt",
     "Icon": "images/mainpage_btn_plugin_ifttt.svg",
     "URL": "https://www.avermedia.com/gaming/creatorcentral",
-    "Version": "1.0.0.2",
+    "Version": "1.0.1.0",
     "Runtime": {
         "mac": {
             "type": "web",
-            "target": "widget.html",
+            "target": "package.html",
             "MinimumVersion": "11.0"
         },
         "win": {
             "type": "web",
-            "target": "widget.html",
+            "target": "package.html",
             "MinimumVersion": "11.0"
         }
     },
     "CreatorCentral": {
-        "MinimumVersion": "1.2",
+        "MinimumVersion": "1.1.2.3",
         "SDKVersion": 2
     },
     "Widgets": [
